objects/ASI_MFM_CN_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_CN_CheckValue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckValue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_NumberValue__c</fullName>
        <label>NumberValue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_TextValue__c</fullName>
        <label>TextValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ASI_MFM_CN_Setting</label>
    <pluralLabel>ASI_MFM_CN_Settings</pluralLabel>
</CustomObject>